Fix height and scrollbar visibility of the Design Preview sidebar

--- a/packages/design-preview/src/components/style.scss
+++ b/packages/design-preview/src/components/style.scss
@@ -62,8 +62,7 @@
 		border: 0;
 		box-shadow: none;
 		display: block;
-		height: 100%;
-		overflow: scroll;
+		height: auto;
 		padding: 0;
 		position: relative;
 		width: 311px;
